<resources>
    <string name="action_settings">Settings</string>
    <!--title-->
    <string name="app_name">m9(^Д^)ﾌﾟｷﾞｬｰ</string>
    <string name="name_select_todo">やること一覧画面</string>
    <string name="name_select_listview">ListView表示画面</string>
    <string name="name_select_tabel">TableLayout表示画面</string>
    <!--set_todo_activity-->
    <string name="text01_name">やること名</string>
    <string name="text01_picture">画像</string>
    <string name="text01_primary">優先度</string>
    <string name="text01_kome">※</string>
    <string name="text01_hinttext">全角・半角12文字以内</string>
    <string name="text01_hintnumber">半角数字</string>
    <string name="button01_picture">選択</string>
    <string name="button01_regist">登録</string>
    <string name="button01_show">List表示</string>
    <string name="button01_alldelete">リストから全削除</string>

    <!-- select_sheet_product 02 -->
    <string name="text02_title">やること一覧</string>
    <string name="button02_alldelete">全削除</string>

    <!-- row_sheet_listview 05 -->
    <string name="text05_title_name">やること名：</string>
    <string name="text05_title_picture">画像：</string>
    <string name="text05_title_primary">優先度：</string>
    <string name="text05_hintnumber">優先度</string>
    <string name="text05_hintnumber2">やること名</string>
    <!-- ここまで -->

    <!-- select_sheet_listview 03 -->
    <string name="text03_title_detail">BaseAdapterを使いListViewをカスタムしてリスト表示します。</string>

    <!-- select_sheet_table 04 -->
    <string name="text04_title_detail">SearchViewを使って品名を検索し、DBから取得したデータをTableRowに加えていく表示の仕方です。</string>
    <string name="text04_hinttext">やること名を入力して下さい。</string>
    <string name="button04_search">検索</string>
    <string name="todo">TODO</string>
</resources>
